Fixed image/spacing errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -615,7 +615,7 @@ margin-bottom: 3.5rem;
     width: 100%;
 }
 .project_textcontainer{
-    padding: 0rem 7% 1rem;
+    padding: 1rem 7%;
     background-color: #316092;
     border-radius: 0 0 10px 10px;
 }
